Fix so collapse heading doesn't get behind plus icon

--- a/sundsvall_se-theme/assets/css/scss/partials/_collapse.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_collapse.scss
@@ -21,11 +21,12 @@
 	> h3,
 	> h4 {
 		margin-bottom: 0;
+
 		a {
 			color: inherit;
 			display: block;
 			padding: $spacer-x * 1.5;
-			padding-right: $spacer-x * 3;
+			padding-right: $spacer-x * 5;
 			background: $gray-lightest;
 			position: relative;
 			text-decoration: none;
